static_plot almost done

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,52 +39,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                date    stock_open    stock_high  \\\n",
-      "count                          62359  6.235900e+04  6.235900e+04   \n",
-      "mean   2018-01-02 18:03:10.856171520  1.977700e+02  2.018739e+02   \n",
-      "min              2017-06-28 00:00:00  1.000000e-06  1.000000e-06   \n",
-      "25%              2017-10-02 00:00:00  8.800000e-01  9.000000e-01   \n",
-      "50%              2018-01-04 00:00:00  1.205000e+01  1.225000e+01   \n",
-      "75%              2018-04-09 00:00:00  4.065375e+01  4.099000e+01   \n",
-      "max              2018-07-06 00:00:00  2.290000e+04  2.425000e+04   \n",
-      "std                              NaN  1.483422e+03  1.514584e+03   \n",
+      "<bound method NDFrame.describe of              date  stock_open  stock_high   stock_low  stock_close  \\\n",
+      "0      2017-06-28    0.712000    0.712000    0.712000     0.712000   \n",
+      "1      2017-06-28   22.799999   22.799999   22.799999    22.799999   \n",
+      "2      2017-06-28   42.009998   42.299999   41.830002    42.169998   \n",
+      "3      2017-06-28  122.779999  123.830002  122.190002   123.739998   \n",
+      "4      2017-06-28   74.000000   74.000000   74.000000    74.000000   \n",
+      "...           ...         ...         ...         ...          ...   \n",
+      "62354  2018-07-06    0.002600    0.002600    0.002600     0.002600   \n",
+      "62355  2018-07-06    1.400000    1.400000    1.400000     1.400000   \n",
+      "62356  2018-07-06    0.750000    0.750000    0.750000     0.750000   \n",
+      "62357  2018-07-06    0.000300    0.000300    0.000300     0.000300   \n",
+      "62358  2018-07-06    0.005500    0.005500    0.003900     0.004000   \n",
       "\n",
-      "          stock_low   stock_close  stock_adj_close  stock_volume  \\\n",
-      "count  6.235900e+04  6.235900e+04     62359.000000  6.235900e+04   \n",
-      "mean   1.934728e+02  1.980472e+02       187.802599  1.572620e+06   \n",
-      "min    1.000000e-06  1.000000e-06        -3.402873  0.000000e+00   \n",
-      "25%    8.800000e-01  8.800000e-01         0.775000  0.000000e+00   \n",
-      "50%    1.187000e+01  1.206000e+01         9.718011  1.180000e+04   \n",
-      "75%    4.006000e+01  4.064500e+01        37.500000  3.003000e+05   \n",
-      "max    2.006006e+04  2.245000e+04     22450.000000  3.463752e+08   \n",
-      "std    1.451025e+03  1.484094e+03      1389.318690  1.018448e+07   \n",
+      "       stock_adj_close  stock_volume  dividends ticker  stock_market_cap  \\\n",
+      "0             0.712000             0        0.0  SAYFF      1.173120e+06   \n",
+      "1            20.280653             0        0.0  FRRFF      1.779093e+09   \n",
+      "2            37.107883        236700        0.0    ABM      2.810021e+09   \n",
+      "3           112.235619       1727500        0.0    ACN      2.107594e+11   \n",
+      "4            53.032448             0        0.0  AHEXF      8.094610e+09   \n",
+      "...                ...           ...        ...    ...               ...   \n",
+      "62354         0.002600             0        0.0   APVS      4.309140e+05   \n",
+      "62355         1.400000             0        0.0   ASFT      2.252050e+06   \n",
+      "62356         0.750000             0        0.0   APCX      3.665795e+07   \n",
+      "62357         0.000300       1000000        0.0   APYP      5.085801e+06   \n",
+      "62358         0.004000       3163223        0.0   APTY      1.531172e+06   \n",
       "\n",
-      "          dividends  stock_market_cap  market_adj_close         sp500  \\\n",
-      "count  62359.000000      6.044400e+04      62359.000000  62359.000000   \n",
-      "mean       0.013088      3.763782e+10       2627.702304      0.062060   \n",
-      "min        0.000000      7.210000e+02       2409.750000      0.000000   \n",
-      "25%        0.000000      1.199012e+07       2529.120117      0.000000   \n",
-      "50%        0.000000      4.276222e+08       2648.050049      0.000000   \n",
-      "75%        0.000000      4.201920e+09       2722.459961      0.000000   \n",
-      "max      360.360350      2.935358e+12       2872.870117      1.000000   \n",
-      "std        2.042879      2.438145e+11        115.971960      0.241266   \n",
+      "       market_adj_close  sp500 exchange          industry  \\\n",
+      "0           2440.689941      0     OOTC  businessServices   \n",
+      "1           2440.689941      0     OOTC  businessServices   \n",
+      "2           2440.689941      0     XNYS  businessServices   \n",
+      "3           2440.689941      1     XNYS  businessServices   \n",
+      "4           2440.689941      0     OOTC  businessServices   \n",
+      "...                 ...    ...      ...               ...   \n",
+      "62354       2759.820068      0     OOTC          software   \n",
+      "62355       2759.820068      0     OOTC          software   \n",
+      "62356       2759.820068      0     XNAS          software   \n",
+      "62357       2759.820068      0     OOTC          software   \n",
+      "62358       2759.820068      0     OOTC          software   \n",
       "\n",
-      "       stock_return  market_return  \n",
-      "count  62101.000000   62358.000000  \n",
-      "mean       0.255059       0.000002  \n",
-      "min       -3.683241      -0.040979  \n",
-      "25%       -0.004814       0.000000  \n",
-      "50%        0.000000       0.000000  \n",
-      "75%        0.006122       0.000000  \n",
-      "max     3113.999968       0.027157  \n",
-      "std       25.426300       0.000501  \n",
+      "                          sector  \n",
+      "0      businessConsumer_services  \n",
+      "1      businessConsumer_services  \n",
+      "2      businessConsumer_services  \n",
+      "3      businessConsumer_services  \n",
+      "4      businessConsumer_services  \n",
+      "...                          ...  \n",
+      "62354                 technology  \n",
+      "62355                 technology  \n",
+      "62356                 technology  \n",
+      "62357                 technology  \n",
+      "62358                 technology  \n",
+      "\n",
+      "[62359 rows x 15 columns]>\n",
+      "['businessServices' 'computer_services' 'consumer_services' nan\n",
+      " 'diversified_holding' 'general_services' 'shell_companies'\n",
+      " 'computer_consumerElectronics' 'emerging_technologies' 'internet_online'\n",
+      " 'networking' 'semiconductors' 'software']\n",
+      "<bound method NDFrame.describe of 0        1.173120e+06\n",
+      "1        1.779093e+09\n",
+      "2        2.810021e+09\n",
+      "3        2.107594e+11\n",
+      "4        8.094610e+09\n",
+      "             ...     \n",
+      "62354    4.309140e+05\n",
+      "62355    2.252050e+06\n",
+      "62356    3.665795e+07\n",
+      "62357    5.085801e+06\n",
+      "62358    1.531172e+06\n",
+      "Name: stock_market_cap, Length: 62359, dtype: float64>\n",
       "['AMADF' 'BDIMF' 'BYDGF' 'EHMEF' 'BKTI' 'DOX' 'ABM' 'AUOTY' 'CSCO' 'ACEYY'\n",
       " 'ALG' 'CMTL' 'GHC' 'AHEXY' 'BCO' 'ADTN' 'ASX' 'AMSWA' 'CSV' 'AAPL'\n",
       " 'DIIBF' 'ASHTY' 'FTAI' 'CCOI' 'FRRFF' 'CKISY' 'ASHTF' 'CLRO' 'CKISF'\n",
@@ -93,51 +123,72 @@
       " 'CPBLF' 'CAJFF' 'CPADF' 'BRRAY' 'AMADY' 'ALMFF' 'ALFFF' 'BDVSY' 'ADT'\n",
       " 'CSIOF' 'AHEXF' 'ASMLF' 'ASML' 'BESVF' 'BESIY' 'CKHUF' 'FSHUF' 'AEXAY'\n",
       " 'ASMIY' 'CAPMF' 'FCODF' 'AUKUF']\n",
-      "                      date    stock_open    stock_high     stock_low  \\\n",
-      "count                  200    200.000000    200.000000    200.000000   \n",
-      "mean   2018-01-11 05:52:48    240.298779    241.349996    236.197330   \n",
-      "min    2017-06-28 00:00:00      1.120000      1.120000      1.120000   \n",
-      "25%    2017-09-25 18:00:00     17.942500     18.375000     17.942500   \n",
-      "50%    2018-01-18 00:00:00     34.830000     35.615000     34.382502   \n",
-      "75%    2018-04-27 18:00:00     75.827501     75.932501     75.132250   \n",
-      "max    2018-07-05 00:00:00  18168.167969  18198.197266  17867.867188   \n",
-      "std                    NaN   1771.036026   1777.955243   1735.323885   \n",
+      "         stock_open    stock_high     stock_low   stock_close  \\\n",
+      "count    200.000000    200.000000    200.000000    200.000000   \n",
+      "mean     240.298779    241.349996    236.197330    237.044787   \n",
+      "std     1771.036026   1777.955243   1735.323885   1739.828938   \n",
+      "min        1.120000      1.120000      1.120000      1.120000   \n",
+      "25%       17.942500     18.375000     17.942500     17.950000   \n",
+      "50%       34.830000     35.615000     34.382502     34.934999   \n",
+      "75%       75.827501     75.932501     75.132250     75.152500   \n",
+      "max    18168.167969  18198.197266  17867.867188  17927.927734   \n",
       "\n",
-      "        stock_close  stock_adj_close  stock_volume  dividends  \\\n",
-      "count    200.000000       200.000000  2.000000e+02  200.00000   \n",
-      "mean     237.044787       212.027492  4.419781e+06    4.08068   \n",
-      "min        1.120000         0.476660  0.000000e+00    0.01400   \n",
-      "25%       17.950000        14.511790  1.750000e+02    0.09000   \n",
-      "50%       34.934999        29.969804  4.745000e+04    0.15950   \n",
-      "75%       75.152500        71.950775  5.283250e+05    0.36500   \n",
-      "max    17927.927734     16098.546875  2.826904e+08  360.36035   \n",
-      "std     1739.828938      1548.139325  2.528473e+07   35.93142   \n",
+      "       stock_adj_close  stock_volume  dividends  stock_market_cap  \\\n",
+      "count       200.000000  2.000000e+02  200.00000      2.000000e+02   \n",
+      "mean        212.027492  4.419781e+06    4.08068      7.964979e+10   \n",
+      "std        1548.139325  2.528473e+07   35.93142      4.118369e+11   \n",
+      "min           0.476660  0.000000e+00    0.01400      9.122550e+06   \n",
+      "25%          14.511790  1.750000e+02    0.09000      1.033148e+09   \n",
+      "50%          29.969804  4.745000e+04    0.15950      4.005438e+09   \n",
+      "75%          71.950775  5.283250e+05    0.36500      1.373880e+10   \n",
+      "max       16098.546875  2.826904e+08  360.36035      2.935358e+12   \n",
       "\n",
-      "       stock_market_cap  market_adj_close       sp500  stock_return  \\\n",
-      "count      2.000000e+02        200.000000  200.000000    194.000000   \n",
-      "mean       7.964979e+10       2628.829270    0.160000     -0.031822   \n",
-      "min        9.122550e+06       2425.550049    0.000000     -3.683241   \n",
-      "25%        1.033148e+09       2509.207520    0.000000     -0.003746   \n",
-      "50%        4.005438e+09       2653.405029    0.000000      0.005123   \n",
-      "75%        1.373880e+10       2724.707520    0.000000      0.012369   \n",
-      "max        2.935358e+12       2853.530029    1.000000      0.156408   \n",
-      "std        4.118369e+11        118.341206    0.367526      0.355086   \n",
-      "\n",
-      "       market_return  \n",
-      "count          200.0  \n",
-      "mean             0.0  \n",
-      "min              0.0  \n",
-      "25%              0.0  \n",
-      "50%              0.0  \n",
-      "75%              0.0  \n",
-      "max              0.0  \n",
-      "std              0.0  \n"
+      "       market_adj_close       sp500  \n",
+      "count        200.000000  200.000000  \n",
+      "mean        2628.829270    0.160000  \n",
+      "std          118.341206    0.367526  \n",
+      "min         2425.550049    0.000000  \n",
+      "25%         2509.207520    0.000000  \n",
+      "50%         2653.405029    0.000000  \n",
+      "75%         2724.707520    0.000000  \n",
+      "max         2853.530029    1.000000  \n",
+      "['date', 'stock_open', 'stock_high', 'stock_low', 'stock_close', 'stock_adj_close', 'stock_volume', 'dividends', 'ticker', 'stock_market_cap', 'market_adj_close', 'sp500', 'exchange', 'industry', 'sector']\n",
+      "date                 object\n",
+      "stock_open          float64\n",
+      "stock_high          float64\n",
+      "stock_low           float64\n",
+      "stock_close         float64\n",
+      "stock_adj_close     float64\n",
+      "stock_volume          int64\n",
+      "dividends           float64\n",
+      "ticker               object\n",
+      "stock_market_cap    float64\n",
+      "market_adj_close    float64\n",
+      "sp500                 int64\n",
+      "exchange             object\n",
+      "industry             object\n",
+      "sector               object\n",
+      "dtype: object\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'function' object has no attribute 'sum'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Janet\\OneDrive - The University of Chicago\\Data_policy\\final-project-janet\\analysis.ipynb Cell 3\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Janet/OneDrive%20-%20The%20University%20of%20Chicago/Data_policy/final-project-janet/analysis.ipynb#X21sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mlist\u001b[39m(df\u001b[39m.\u001b[39mcolumns))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Janet/OneDrive%20-%20The%20University%20of%20Chicago/Data_policy/final-project-janet/analysis.ipynb#X21sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(df\u001b[39m.\u001b[39mdtypes)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Janet/OneDrive%20-%20The%20University%20of%20Chicago/Data_policy/final-project-janet/analysis.ipynb#X21sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m non_zero_count \u001b[39m=\u001b[39m (df[\u001b[39m'\u001b[39;49m\u001b[39mstock_volume\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49misnull)\u001b[39m.\u001b[39;49msum()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Janet/OneDrive%20-%20The%20University%20of%20Chicago/Data_policy/final-project-janet/analysis.ipynb#X21sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mprint\u001b[39m(non_zero_count)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'function' object has no attribute 'sum'"
      ]
     }
    ],
    "source": [
     "#summary stats\n",
-    "print(df.describe())\n",
+    "# print(df.describe())\n",
+    "print(df.describe)\n",
+    "print(df['industry'].unique())\n",
+    "print(df['stock_market_cap'].describe)\n",
     "\n",
     "non_zero_dividends = df[df['dividends'] != 0]\n",
     "\n",
@@ -146,7 +197,11 @@
     "\n",
     "print(unique_stocks_count)\n",
     "\n",
-    "print(non_zero_dividends.describe())"
+    "print(non_zero_dividends.describe())\n",
+    "print(list(df.columns))\n",
+    "print(df.dtypes)\n",
+    "non_zero_count = (df['stock_volume'].isnull).sum()\n",
+    "print(non_zero_count)"
    ]
   },
   {
