--- a/za/analysis.ipynb
+++ b/za/analysis.ipynb
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -784,106 +784,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after 'if' statement on line 27 (1206806449.py, line 31)",
+     "ename": "ValueError",
+     "evalue": "attempt to get argmax of an empty sequence",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[89], line 31\u001b[1;36m\u001b[0m\n\u001b[1;33m    elif study_type in ['volume', 'market_cap']:\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'if' statement on line 27\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Janet\\OneDrive - The University of Chicago\\Data_policy\\final-project-janet\\analysis.ipynb Cell 11\u001b[0m line \u001b[0;36m8\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Janet/OneDrive%20-%20The%20University%20of%20Chicago/Data_policy/final-project-janet/analysis.ipynb#X25sZmlsZQ%3D%3D?line=78'>79</a>\u001b[0m group_by \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39msector\u001b[39m\u001b[39m'\u001b[39m  \u001b[39m# Can be 'industry', 'sector', or 'exchange'\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Janet/OneDrive%20-%20The%20University%20of%20Chicago/Data_policy/final-project-janet/analysis.ipynb#X25sZmlsZQ%3D%3D?line=80'>81</a>\u001b[0m \u001b[39m# For stock price event study\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Janet/OneDrive%20-%20The%20University%20of%20Chicago/Data_policy/final-project-janet/analysis.ipynb#X25sZmlsZQ%3D%3D?line=81'>82</a>\u001b[0m grouped_price_event_data \u001b[39m=\u001b[39m event_study(stock_data, \u001b[39m'\u001b[39;49m\u001b[39mprice\u001b[39;49m\u001b[39m'\u001b[39;49m, event_date, group_by)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Janet/OneDrive%20-%20The%20University%20of%20Chicago/Data_policy/final-project-janet/analysis.ipynb#X25sZmlsZQ%3D%3D?line=82'>83</a>\u001b[0m \u001b[39mfor\u001b[39;00m group_data \u001b[39min\u001b[39;00m grouped_price_event_data:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Janet/OneDrive%20-%20The%20University%20of%20Chicago/Data_policy/final-project-janet/analysis.ipynb#X25sZmlsZQ%3D%3D?line=83'>84</a>\u001b[0m     plot_event_study(group_data, \u001b[39m'\u001b[39m\u001b[39mprice\u001b[39m\u001b[39m'\u001b[39m, event_date, group_by)\n",
+      "\u001b[1;32mc:\\Users\\Janet\\OneDrive - The University of Chicago\\Data_policy\\final-project-janet\\analysis.ipynb Cell 11\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Janet/OneDrive%20-%20The%20University%20of%20Chicago/Data_policy/final-project-janet/analysis.ipynb#X25sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m \u001b[39mif\u001b[39;00m study_type \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mprice\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Janet/OneDrive%20-%20The%20University%20of%20Chicago/Data_policy/final-project-janet/analysis.ipynb#X25sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m     \u001b[39m# Perform event study for stock price\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Janet/OneDrive%20-%20The%20University%20of%20Chicago/Data_policy/final-project-janet/analysis.ipynb#X25sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m     group_data\u001b[39m.\u001b[39mloc[:, \u001b[39m'\u001b[39m\u001b[39mstock_return\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m group_data\u001b[39m.\u001b[39mgroupby(\u001b[39m'\u001b[39m\u001b[39mticker\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m'\u001b[39m\u001b[39mstock_adj_close\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mpct_change()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Janet/OneDrive%20-%20The%20University%20of%20Chicago/Data_policy/final-project-janet/analysis.ipynb#X25sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m     group_data\u001b[39m.\u001b[39mloc[:, \u001b[39m'\u001b[39m\u001b[39mmarket_return\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m group_data[\u001b[39m'\u001b[39;49m\u001b[39mmarket_adj_close\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mpct_change()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Janet/OneDrive%20-%20The%20University%20of%20Chicago/Data_policy/final-project-janet/analysis.ipynb#X25sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m     parameters \u001b[39m=\u001b[39m {ticker: estimate_parameters(ticker, group_data) \u001b[39mfor\u001b[39;00m ticker \u001b[39min\u001b[39;00m group_data[\u001b[39m'\u001b[39m\u001b[39mticker\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39munique()}\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Janet/OneDrive%20-%20The%20University%20of%20Chicago/Data_policy/final-project-janet/analysis.ipynb#X25sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     group_data\u001b[39m.\u001b[39mloc[:, \u001b[39m'\u001b[39m\u001b[39mexpected_return\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m group_data\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m row: calculate_expected_return(row, parameters), axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\generic.py:11704\u001b[0m, in \u001b[0;36mNDFrame.pct_change\u001b[1;34m(self, periods, fill_method, limit, freq, **kwargs)\u001b[0m\n\u001b[0;32m  11702\u001b[0m \u001b[39mfor\u001b[39;00m _, col \u001b[39min\u001b[39;00m cols:\n\u001b[0;32m  11703\u001b[0m     mask \u001b[39m=\u001b[39m col\u001b[39m.\u001b[39misna()\u001b[39m.\u001b[39mvalues\n\u001b[1;32m> 11704\u001b[0m     mask \u001b[39m=\u001b[39m mask[np\u001b[39m.\u001b[39;49margmax(\u001b[39m~\u001b[39;49mmask) :]\n\u001b[0;32m  11705\u001b[0m     \u001b[39mif\u001b[39;00m mask\u001b[39m.\u001b[39many():\n\u001b[0;32m  11706\u001b[0m         warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m  11707\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mThe default fill_method=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mpad\u001b[39m\u001b[39m'\u001b[39m\u001b[39m in \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m  11708\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtype\u001b[39m(\u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m.pct_change is deprecated and will \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m  11713\u001b[0m             stacklevel\u001b[39m=\u001b[39mfind_stack_level(),\n\u001b[0;32m  11714\u001b[0m         )\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\numpy\\core\\fromnumeric.py:1229\u001b[0m, in \u001b[0;36margmax\u001b[1;34m(a, axis, out, keepdims)\u001b[0m\n\u001b[0;32m   1142\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   1143\u001b[0m \u001b[39mReturns the indices of the maximum values along an axis.\u001b[39;00m\n\u001b[0;32m   1144\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1226\u001b[0m \u001b[39m(2, 1, 4)\u001b[39;00m\n\u001b[0;32m   1227\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   1228\u001b[0m kwds \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mkeepdims\u001b[39m\u001b[39m'\u001b[39m: keepdims} \u001b[39mif\u001b[39;00m keepdims \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m np\u001b[39m.\u001b[39m_NoValue \u001b[39melse\u001b[39;00m {}\n\u001b[1;32m-> 1229\u001b[0m \u001b[39mreturn\u001b[39;00m _wrapfunc(a, \u001b[39m'\u001b[39;49m\u001b[39margmax\u001b[39;49m\u001b[39m'\u001b[39;49m, axis\u001b[39m=\u001b[39;49maxis, out\u001b[39m=\u001b[39;49mout, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\numpy\\core\\fromnumeric.py:59\u001b[0m, in \u001b[0;36m_wrapfunc\u001b[1;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[0;32m     56\u001b[0m     \u001b[39mreturn\u001b[39;00m _wrapit(obj, method, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[0;32m     58\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m---> 59\u001b[0m     \u001b[39mreturn\u001b[39;00m bound(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n\u001b[0;32m     60\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m     61\u001b[0m     \u001b[39m# A TypeError occurs if the object does have such a method in its\u001b[39;00m\n\u001b[0;32m     62\u001b[0m     \u001b[39m# class, but its signature is not identical to that of NumPy's. This\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     66\u001b[0m     \u001b[39m# Call _wrapit from within the except clause to ensure a potential\u001b[39;00m\n\u001b[0;32m     67\u001b[0m     \u001b[39m# exception has a traceback chain.\u001b[39;00m\n\u001b[0;32m     68\u001b[0m     \u001b[39mreturn\u001b[39;00m _wrapit(obj, method, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n",
+      "\u001b[1;31mValueError\u001b[0m: attempt to get argmax of an empty sequence"
      ]
     }
    ],
    "source": [
-    "def event_study(data, study_type, event_date, column_of_interest, window_size=10, estimation_window_size=30):\n",
-    "    \"\"\"\n",
-    "    Performs an event study for either stock price, stock volume, or any specified metric (e.g., market cap).\n",
+    "path = 'C:/Users/Janet/OneDrive - The University of Chicago/Data_policy/final-project-janet'\n",
+    "file_name = 'combined_stock_data.csv'\n",
+    "file_path = os.path.join(path, file_name)\n",
+    "stock_data = pd.read_csv(file_path)\n",
     "\n",
-    "    :param data: DataFrame containing the stock data.\n",
-    "    :param study_type: Type of study - 'price', 'volume', or 'custom'.\n",
-    "    :param event_date: The event date (datetime object).\n",
-    "    :param column_of_interest: The column to be analyzed (e.g., 'stock_volume', 'market_cap').\n",
-    "    :param window_size: Size of the event window (days).\n",
-    "    :param estimation_window_size: Size of the estimation window (days).\n",
-    "    :return: DataFrame with event window data and calculated values.\n",
+    "def event_study(data, study_type, event_date, group_by, window_size=10, estimation_window_size=30):\n",
     "    \"\"\"\n",
-    "\n",
-    "    # Convert 'date' column to datetime once for efficiency\n",
+    "    Performs an event study for either stock price or stock volume, grouped by industry, sector, or exchange.\n",
+    "    \"\"\"\n",
+    "    # Convert 'date' column to datetime\n",
     "    data['date'] = pd.to_datetime(data['date'])\n",
     "\n",
-    "    # Define the event and estimation windows\n",
+    "    # Define event and estimation windows\n",
     "    start_date = event_date - timedelta(days=window_size)\n",
     "    end_date = event_date + timedelta(days=window_size)\n",
     "    estimation_start_date = start_date - timedelta(days=estimation_window_size)\n",
     "    estimation_end_date = start_date - timedelta(days=1)\n",
     "\n",
-    "    # Filter data for the event and estimation windows\n",
-    "    event_window_data = data[(data['date'] >= start_date) & (data['date'] <= end_date)].copy()\n",
-    "    estimation_window_data = data[(data['date'] >= estimation_start_date) & (data['date'] <= estimation_end_date)].copy()\n",
+    "    grouped_event_data = []\n",
+    "    for group in data[group_by].unique():\n",
+    "        group_data = data[(data['date'] >= start_date) & (data['date'] <= end_date) & (data[group_by] == group)].copy()\n",
+    "        group_estimation_data = data[(data['date'] >= estimation_start_date) & (data['date'] <= estimation_end_date) & (data[group_by] == group)].copy()\n",
     "\n",
-    "    if study_type == 'price':\n",
-    "        # Perform event study for stock price\n",
-    "        # [Add the existing code for price event study]\n",
+    "        if study_type == 'price':\n",
+    "            # Perform event study for stock price\n",
+    "            group_data.loc[:, 'stock_return'] = group_data.groupby('ticker')['stock_adj_close'].pct_change()\n",
+    "            group_data.loc[:, 'market_return'] = group_data['market_adj_close'].pct_change()\n",
+    "            parameters = {ticker: estimate_parameters(ticker, group_data) for ticker in group_data['ticker'].unique()}\n",
+    "            group_data.loc[:, 'expected_return'] = group_data.apply(lambda row: calculate_expected_return(row, parameters), axis=1)\n",
+    "            group_data.loc[:, 'abnormal_return'] = group_data['stock_return'] - group_data['expected_return']\n",
     "\n",
-    "    elif study_type in ['volume', 'market_cap']:\n",
-    "        # Check if the specified column exists\n",
-    "        if column_of_interest not in data.columns:\n",
-    "            print(f\"Error: '{column_of_interest}' column not found in the data.\")\n",
-    "            return None\n",
+    "        elif study_type == 'volume':\n",
+    "            # Perform event study for stock volume\n",
+    "            average_volume_estimation = group_estimation_data.groupby('ticker')['stock_volume'].mean()\n",
+    "            group_data = group_data.join(average_volume_estimation, on='ticker', rsuffix='_avg')\n",
+    "            group_data.loc[:, 'volume_difference'] = group_data['stock_volume'] - group_data['stock_volume_avg']\n",
     "\n",
-    "        # Perform event study for the specified metric\n",
-    "        average_metric_estimation = estimation_window_data.groupby('ticker')[column_of_interest].mean()\n",
-    "        event_window_data = event_window_data.join(average_metric_estimation, on='ticker', rsuffix='_avg')\n",
-    "        event_window_data.loc[:, f'{column_of_interest}_difference'] = event_window_data[column_of_interest] - event_window_data[f'{column_of_interest}_avg']\n",
+    "        grouped_event_data.append(group_data)\n",
     "\n",
-    "    return event_window_data\n",
+    "    return grouped_event_data\n",
     "\n",
-    "def plot_event_study(event_window_data, study_type, event_date):\n",
+    "\n",
+    "def plot_event_study(grouped_event_data, study_type, event_date, group_by):\n",
     "    \"\"\"\n",
-    "    Plots the results of an event study for stock volume or stock price.\n",
+    "    Plots the results of an event study for stock volume or stock price, grouped by industry, sector, or exchange.\n",
     "    \"\"\"\n",
-    "    # Determine the column to use based on study type\n",
-    "    column = 'volume_difference' if study_type == 'volume' else 'abnormal_return'\n",
+    "    for group_data in grouped_event_data:\n",
+    "        # Determine the column to use based on study type\n",
+    "        column = 'volume_difference' if study_type == 'volume' else 'abnormal_return'\n",
     "\n",
-    "    # Calculate mean and confidence interval\n",
-    "    grouped_data = event_window_data.groupby('date')[column]\n",
-    "    mean_data = grouped_data.mean()\n",
-    "    sem_data = grouped_data.std() / np.sqrt(grouped_data.count())\n",
-    "    ci = 1.96 * sem_data\n",
+    "        # Calculate mean and confidence interval\n",
+    "        grouped_data = group_data.groupby('date')[column]\n",
+    "        mean_data = grouped_data.mean()\n",
+    "        sem_data = grouped_data.std() / np.sqrt(grouped_data.count())\n",
+    "        ci = 1.96 * sem_data\n",
     "\n",
-    "    mean_data = mean_data.to_frame('mean')\n",
-    "    mean_data['lower_ci'] = mean_data['mean'] - ci\n",
-    "    mean_data['upper_ci'] = mean_data['mean'] + ci\n",
+    "        mean_data = mean_data.to_frame('mean')\n",
+    "        mean_data['lower_ci'] = mean_data['mean'] - ci\n",
+    "        mean_data['upper_ci'] = mean_data['mean'] + ci\n",
     "\n",
-    "    # Plotting\n",
-    "    plt.figure(figsize=(15, 6) if study_type == 'volume' else (10, 6))\n",
-    "    plt.fill_between(mean_data.index, mean_data['lower_ci'], mean_data['upper_ci'], color='gray' if study_type == 'volume' else 'blue', alpha=0.3)\n",
-    "    sns.lineplot(data=mean_data, x=mean_data.index, y='mean', marker='o')\n",
+    "        # Plotting\n",
+    "        plt.figure(figsize=(15, 6) if study_type == 'volume' else (10, 6))\n",
+    "        plt.fill_between(mean_data.index, mean_data['lower_ci'], mean_data['upper_ci'], color='gray' if study_type == 'volume' else 'blue', alpha=0.3)\n",
+    "        sns.lineplot(data=mean_data, x=mean_data.index, y='mean', marker='o')\n",
     "\n",
-    "    plt.axhline(0, color='grey', linestyle='--')\n",
-    "    plt.axvline(mdates.date2num(event_date), color='red', lw=1, ls='--')  # Event date line\n",
-    "    plt.title('Average ' + ('Abnormal Returns' if study_type == 'price' else 'Volume Difference') + ' around the Event Date (with 95% CI)')\n",
-    "    plt.xlabel('Date')\n",
-    "    plt.ylabel('Average ' + ('Abnormal Return' if study_type == 'price' else 'Volume Difference'))\n",
-    "    plt.xticks(rotation=45)\n",
-    "    plt.gca().xaxis.set_major_formatter(mdates.DateFormatter('%Y-%m-%d'))\n",
-    "    plt.gca().xaxis.set_major_locator(mdates.DayLocator())\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
+    "        plt.axhline(0, color='grey', linestyle='--')\n",
+    "        plt.axvline(mdates.date2num(event_date), color='red', lw=1, ls='--')  # Event date line\n",
+    "        plt.title(f'Average {(\"Abnormal Returns\" if study_type == \"price\" else \"Volume Difference\")} for {group_data[group_by].iloc[0]} around the Event Date (with 95% CI)')\n",
+    "        plt.xlabel('Date')\n",
+    "        plt.ylabel('Average ' + ('Abnormal Return' if study_type == 'price' else 'Volume Difference'))\n",
+    "        plt.xticks(rotation=45)\n",
+    "        plt.gca().xaxis.set_major_formatter(mdates.DateFormatter('%Y-%m-%d'))\n",
+    "        plt.gca().xaxis.set_major_locator(mdates.DayLocator())\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n",
+    "# Example usage\n",
     "\n",
-    "# Example usage:\n",
     "event_date = datetime(2018, 6, 28)\n",
-    "# stock_data = pd.read_csv('your_stock_data.csv')  # Load your data\n",
+    "group_by = 'sector'  # Can be 'industry', 'sector', or 'exchange'\n",
     "\n",
     "# For stock price event study\n",
-    "price_event_data = event_study(stock_data, 'price', event_date)\n",
-    "plot_event_study(price_event_data, 'price', event_date)\n",
+    "grouped_price_event_data = event_study(stock_data, 'price', event_date, group_by)\n",
+    "for group_data in grouped_price_event_data:\n",
+    "    plot_event_study(group_data, 'price', event_date, group_by)\n",
     "\n",
     "# For stock volume event study\n",
-    "volume_event_data = event_study(stock_data, 'volume', event_date)\n",
-    "plot_event_study(volume_event_data, 'volume', event_date)\n"
+    "grouped_volume_event_data = event_study(stock_data, 'volume', event_date, group_by)\n",
+    "for group_data in grouped_volume_event_data:\n",
+    "    plot_event_study(group_data, 'volume', event_date, group_by)\n"
    ]
   }
  ],
